--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>I'm currently rebuilding my website, stay tuned!</h2>
 								</header>
 								<ul class="features">
 									<li>
