--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Ryan Rubenzahl  龙凤</h1>
+						<h1>Ryan Rubenzahl</h1>
 						<h2>PhD Candidate</h2>
 					</header>
 
