--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Ryan Rubenzahl</h1>
-						<h2>PhD Candidate</h2>
+						<h2>PhD Candidate, Caltech</h2>
 					</header>
 
 				<!-- Nav -->
