--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
 							<li><a href="#research">Research</a></li>
-							<li><a href="blog/index.html">Blog</a></li>
+							<li><a href="#blog">Blog</a></li>
 						</ul>
 					</nav>
 
