--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style3 fa-sun"></span>
+										<h3>SoCal</h3>
+										<p>The Solar Calibrator (SoCal) autonomously collects 1,000 solar spectra up to SNR 2400 with the Keck Planet Finder every day.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
