--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
 						<h1>Ryan Rubenzahl</h1>
 						<h2>PhD Candidate, Caltech</h2>
 					</header>
