--- a/index.html
+++ b/index.html
@@ -59,25 +59,28 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="research" class="main special">
 								<header class="major">
 									<h2>I'm currently rebuilding my website, stay tuned!</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style1 fa-telescope"></span>
+										<h3>KPF</h3>
+										<p>I'm a part of the the Keck Planet Finder instrument and science team: check
+                                        out our commissioning progress!</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-sun"></span>
 										<h3>SoCal</h3>
-										<p>The Solar Calibrator (SoCal) autonomously collects 1,000 solar spectra up to SNR 2400 with the Keck Planet Finder every day.</p>
+										<p>Stellar activity is a big problem. I built the Solar Calibrator to observe
+                                        the Sun with KPF.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style5 fa-planet"></span>
+										<h3>Obliquities</h3>
+										<p>I use RV spectroraphs to measure the (mis)alignment between an exoplanet's
+                                        orbit and its host star.</p>
 									</li>
 								</ul>
 								<footer class="major">
