--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 											capabilities to be sensitive to Earth-Sun analogs. Towards this, 
 											I built the "Solar Calibrator" to study stellar activity up-close 
 											on our nearest Sun-like star.</p>
+
+                                        <p> I am currently rebuilding my website (because I upgraded Hugo and it broke
+                                        everything) -- stay tuned as I transfer and update to this new site. </p)
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -58,10 +61,10 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- Research Section -->
 							<section id="research" class="main special">
 								<header class="major">
-									<h2>I'm currently rebuilding my website, stay tuned!</h2>
+									<h2>Research Highlights</h2>
 								</header>
 								<ul class="features">
 									<li>
