--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<li>
 										<span class="icon major style5 fa-planet"></span>
 										<h3>Obliquities</h3>
-										<p>I use RV spectroraphs to measure the (mis)alignment between an exoplanet's
+										<p>I use RV spectrographs to measure the (mis)alignment between an exoplanet's
                                         orbit and its host star.</p>
 									</li>
 								</ul>
