--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                                         <p> I am currently rebuilding my website (because I upgraded Hugo and it broke
                                         everything) -- stay tuned as I transfer and update to this new site. </p)
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<!--<a href="generic.html" class="button">Learn More</a>-->
+											<a href="files/Ryan_Rubenzahl_CV.pdf" class="button">View my CV</a>
 										</ul>
 									</div>
 									<span class="image"><img src="images/me_socal.jpg" alt="" /></span>
