--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li><a href="#intro" class="active">About Me</a></li>
 							<li><a href="#research">Research</a></li>
 							<li><a href="#blog">Blog</a></li>
-                            <li><a href="files/Ryan_Rubenzahl_CV.pdf" class="button">CV</a></li>
+							<li><a href="files/Ryan_Rubenzahl_CV.pdf">CV</a></li>
 						</ul>
 					</nav>
 
