add outreach, organizing, images, blog with grad questions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
 							<li><a href="#research">Research</a></li>
-							<li><a href="#blog">Blog</a></li>
+							<li><a href="#outreach">Outreach</a></li>
+							<li><a href="#organizing">Organizing</a></li>
+							<li><a href="blog">Blog</a></li>
 							<li><a href="files/Ryan_Rubenzahl_CV.pdf">CV</a></li>
 						</ul>
 					</nav>
@@ -46,7 +48,8 @@
 										<header class="major">
 											<h2>Welcome</h2>
 										</header>
-										<p>I use the radial velocity (RV) technique to understand the demographics of 
+										<p> Hello! My name is Ryan Rubenzahl (<a href="https://pronouns.org/what-and-why">he/him</a>). 
+                                            I use the radial velocity (RV) technique to understand the demographics of 
 											exoplanets in our galaxy. I'm particularly motivated to advance RV 
 											capabilities to be sensitive to Earth-Sun analogs. Towards this, 
 											I built the "Solar Calibrator" to study stellar activity up-close 
@@ -56,10 +59,10 @@
                                         everything) -- stay tuned as I transfer and update to this new site. </p)
 										<ul class="actions">
 											<!--<a href="generic.html" class="button">Learn More</a>-->
-											<a href="files/Ryan_Rubenzahl_CV.pdf" class="button">View my CV</a>
 										</ul>
 									</div>
-									<span class="image"><img src="images/me_socal.jpg" alt="" /></span>
+									<span class="image"><img src="images/me_socal.jpg" alt="Me, pointing at my PhD thesis instrument, the
+                                    Solar Calibrator (SoCal)." /></span>
 								</div>
 							</section>
 
@@ -70,19 +73,23 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-telescope"></span>
+										<!--<span class="icon major style1 fa-telescope"></span>-->
+                                        <span class="image"><img src="images/kpf_ait_ssl.jpg" height="200px" alt="KPF Project Manager
+                                        Kodi Rider assembling the main spectrograph at the Berkeley Space Sciences Laboratory." /></span>
 										<h3>KPF</h3>
 										<p>I'm a part of the the Keck Planet Finder instrument and science team: check
                                         out our commissioning progress!</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-sun"></span>
+										<!--<span class="icon major style3 fa-sun"></span>-->
+									<span class="image"><img src="images/socal.jpg" height="200px" alt="The Solar Calibrator (SoCal)." /></span>
 										<h3>SoCal</h3>
-										<p>Stellar activity is a big problem. I built the Solar Calibrator to observe
-                                        the Sun with KPF.</p>
+										<p>I built the Solar Calibrator to study stellar activity on the Sun with KPF.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-planet"></span>
+										<!--<span class="icon major style5 fa-planet"></span>-->
+                                        <span class="image"><img src="images/obliquity_thumbnail.png" height="200px" alt="The angle
+                                        between a planet's orbital plane and its host stars rotation axis is called the obliquity." /></span>
 										<h3>Obliquities</h3>
 										<p>I use RV spectrographs to measure the (mis)alignment between an exoplanet's
                                         orbit and its host star.</p>
@@ -95,42 +102,50 @@
 								</footer>
 							</section>
 
-						<!-- Second Section -->
-<!-- 							<section id="second" class="main special">
+							<section id="outreach" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Outreach</h2>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
+								<ul class="features">
+									<li>
+										<span class="image"><img src="images/mercury_transit.jpg" height="200px" alt="Showing a local
+                                        Pasadena family the November 11, 2019 Mercury transit through my telescope + solar filter"/></span>
+                                        <p>I regularly participate in our astronomy 
+                                        <a href="https://www.astro.caltech.edu/outreach/">outreach program</a> 
+                                        at Caltech, including stargazing events on campus, on sidewalks in downtown Pasadena, and in
+                                        National Parks like Death Valley.
+                                       </p>
 									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
+									<li>
+										<iframe width="350" height="200" src="https://www.youtube.com/embed/7A9c5IEzM0w"></iframe>
+                                        <p>I gave a public lecture for CaltechAstro outreach on our YouTube channel about how radial
+                                        velocity spectrographs work and why stellar activity is such a big problem.</p>
 									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
+							</section>
+
+							<section id="organizing" class="main special">
+								<header class="major">
+									<h2>Community Organizing</h2>
+								</header>
+								<ul class="features">
+									<li>
+                                        <span class="image"><img  src="images/cgpu.png" width="300px" alt="CGPU logo"/></span>
+										<p>I'm a founding member of <a href="https://caltechgpu.org/">Caltech Grads and Postdocs
+                                        United,</a> the active effort at Caltech to form a labor union for graduate and postdoctoral 
+                                        researchers. Please reach out if you have unionization questions and/or are interested in 
+                                        forming a higher-ed labor union at your
+                                        institution!</p>
 									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+									<li>
+                                        <span class="image"><img  src="images/yesonH.png" height="100px" alt="Pasadena Measure H"/></span>
+										<p>I believe we can all do our best work when economic barriers to living and working in the
+                                        US are removed. That's why I and other Caltech grad students helped collect over 15,000 
+                                        signatures to win <a href="https://pasadena4rentcontrol.org/">the strongest rent control 
+                                        and just-cause eviction protections in the country</a>, right here in Pasadena CA.</a> 
+                                        </p>
 									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section> -->
+							</section>
+
 
 						<!-- Get Started -->
 <!-- 							<section id="cta" class="main special">
