Add icons/web links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 					<header id="header" class="alt">
 						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
 						<h1>Ryan Rubenzahl</h1>
-						<h2>PhD Candidate, Caltech</h2>
+						<h2>NSF Graduate Research Fellow, Caltech</h2>
+            <ul class="icons">
+                <li><a href="https://github.com/rrubenza/" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+                <li><a href="https://twitter.com/RyanRubenzahl" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+                <li><a href="https://scholar.google.com/citations?user=odo71-IAAAAJ&hl=en" class="icon fa-graduation-cap alt"><span class="label">Google Scholar</span></a></li>
+                <li><a href="https://www.linkedin.com/in/ryanrubenzahl/" class="icon fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+            </ul>
 					</header>
 
 				<!-- Nav -->
@@ -183,12 +189,6 @@
 								<dt>Email</dt>
 								<dd><a href="#">rrubenza@caltech.edu</a></dd>
 							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-ai fa-google-scholar alt"><span class="label">Google Scholar</span></a></li>
-								<li><a href="#" class="icon fab-linkedin alt"><span class="label">Linkedin</span></a></li>
-							</ul>
 						</section>
 						<p class="copyright">&copy; Ryan Rubenzahl. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
