--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
 										<header class="major">
 											<h2>Welcome</h2>
 										</header>
-										<p> Hello! My name is Ryan Rubenzahl (<a href="https://pronouns.org/what-and-why">he/him</a>). 
-                                            I use the radial velocity (RV) technique to understand the demographics of 
-											exoplanets in our galaxy. I'm particularly motivated to advance RV 
-											capabilities to be sensitive to Earth-Sun analogs. Towards this, 
-											I built the "Solar Calibrator" to study stellar activity up-close 
-											on our nearest Sun-like star.</p>
+					<p> 
+					 Hello! My name is Ryan Rubenzahl (<a href="https://pronouns.org/what-and-why">he/him</a>). 
+					 I am a newly-minted Ph.D. from Caltech. In the fall, I'll be starting a postdoctoral position
+					 as a Flatiron Research Fellow at the Flatiron Institute's
+					 <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">
+					 Center for Computational Astrophysics</a>. At Caltech I built the Solar Calibrator (SoCal)
+					 to study stellar activity up-close on our nearest Sun-like star and studied the origins
+					 of close-in exoplanets, primarily by measuring their obliquities. More broadly,
+					 I use the radial velocity (RV) technique to understand the demographics of
+					 exoplanets across our galaxy and advance the technique to be sensitive to Earth-Sun analogs.
+					</p>
 
                                         <p> I am currently rebuilding my website (because I upgraded Hugo and it broke
                                         everything) -- stay tuned as I transfer and update to this new site. </p)
