--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
-						<h1>Ryan Rubenzahl</h1>
-						<h2>NSF Graduate Research Fellow, Caltech</h2>
+						<h1>Ryan Rubenzahl, Ph.D.</h1>
+						<h2>Astrophysicist</h2>
             <ul class="icons">
                 <li><a href="https://github.com/rrubenza/" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
                 <li><a href="https://twitter.com/RyanRubenzahl" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
