--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
 							<h2>Contact</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1200 E California Blvd &bull; Pasadena, CA 91107 &bull; USA</dd>
+								<dd>162 5th Ave, New York, NY 10010 &bull; USA</dd>
 <!-- 								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd> -->
 								<dt>Email</dt>
-								<dd><a href="#">rrubenza@caltech.edu</a></dd>
+								<dd><a href="#">rrubenzahl@flatironinstitute.org</a></dd>
 							</dl>
 						</section>
 						<p class="copyright">&copy; Ryan Rubenzahl. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
