--- a/index.html
+++ b/index.html
@@ -56,14 +56,18 @@
 										</header>
 					<p> 
 					 Hello! My name is Ryan Rubenzahl (<a href="https://pronouns.org/what-and-why">he/him</a>). 
-					 I am a newly-minted Ph.D. from Caltech. In the fall, I'll be starting a postdoctoral position
-					 as a Flatiron Research Fellow at the Flatiron Institute's
+					 I am a postdoctoral researcher at the Flatiron Institute's
 					 <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">
-					 Center for Computational Astrophysics</a>. At Caltech I built the Solar Calibrator (SoCal)
-					 to study stellar activity up-close on our nearest Sun-like star and studied the origins
-					 of close-in exoplanets, primarily by measuring their obliquities. More broadly,
-					 I use the radial velocity (RV) technique to understand the demographics of
-					 exoplanets across our galaxy and advance the technique to be sensitive to Earth-Sun analogs.
+					 Center for Computational Astrophysics</a> where I work with large datasets of the Sun taken by 
+				 	 Extremely Precise Radial Velocity (EPRV) spectrometers (like KPF and NEID) to study stellar 
+					 variabliity and instrumental systematics at the individual pixel level. I recieved my PhD from
+					 Caltech in 2024 where I built the Solar Calibrator (SoCal) for KPF and explored the origins of 
+					 close-in giant planets such as WASP-107 b, KELT-18 b, and Kepler-1656 b by measuring their stellar 
+					 obliquities. More broadly, I use the radial velocity (RV) technique to understand the demographics of
+					 exoplanets across our galaxy and advance the technique to be sensitive to Earth-Sun analogs. I am a 
+					 member of the <a href="https://www.terrahunting.org/">Terra Hunting Experiment</a> (THE) which will 
+					 soon be starting a decade long survey with the new HARPS-3 spectrograph to search for Earth-like 
+					 exoplanets around the nearest Sun-like stars.
 					</p>
 
                                         <p> I am currently rebuilding my website (because I upgraded Hugo and it broke
